syntax = "proto3";
package kademlia;

service Kademlia {
  rpc Ping (PingRequest) returns (PingResponse);
  rpc Store (StoreRequest) returns (StoreResponse);
  rpc FindNode (FindNodeRequest) returns (FindNodeResponse);
  rpc FindValue (FindValueRequest) returns (FindValueResponse);
  rpc Join (JoinRequest) returns (JoinResponse);
  rpc Shutdown (ShutdownRequest) returns (ShutdownResponse);
}

message Node {
  bytes id = 1;
  string ip = 2;
  uint32 port = 3;
  bytes public_key = 4;
}

message PingRequest {
  Node sender = 1;
}

message PingResponse {
  bool alive = 1;
}

message StoreRequest {
  Node sender = 1;
  bytes key = 2;
  bytes value = 3;
}

message StoreResponse {
  bool success = 1;
}

message FindNodeRequest {
  Node sender = 1;
  bytes id = 2;
}

message FindNodeResponse {
  repeated Node nodes = 1;
}

message FindValueRequest {
  Node sender = 1;
  bytes key = 2;
}

message FindValueResponse {
  optional bytes value = 1;
  repeated Node nodes = 2;
}

message JoinRequest {
  Node sender = 1;
  bytes nonce = 2;
  bytes pow_hash = 3;
}

message JoinResponse {
  bool accepted = 1;
  repeated Node closest_nodes = 2;
}

message ShutdownRequest {}

message ShutdownResponse {}
